syntax = "proto3";

package ggorder.models.v1;
option go_package = "github.com/timur-chilli/ggshop/customer_side/internal/pb/models";

message GGOrderInfoModel {
    uint64 id     = 1; 
    string customerName   = 2;
    string email  = 3;
    string details = 4;
}

message GGOrderInsertModel {
    string customerName   = 1;
    string email  = 2;
    string details = 4;
}