syntax = "proto3";
package warehouse.service.v1;

option go_package = "github.com/timur-chilli/ggshop/warehouse/internal/pb/warehouse_api";
import "models/ggorder_model.proto";
import "google/api/annotations.proto";

service WarehouseService {
   rpc GetGGOrderInfoByIDs (GetGGOrderInfoByIDsRequest) returns (GetGGOrderInfoByIDsResponse) {
        option (google.api.http) = {
            post: "/ggorderInfo/get-by-ids"
            body: "*"
        };
    }

    rpc UpdateGGOrderInfos (GGOrderInfoUpdateRequest) returns (GGOrderInfoUpdateResponse) {
        option (google.api.http) = {
            post: "/ggorderInfo/update"
            body: "*"
        };
    }
 }

message GetGGOrderInfoByIDsRequest {
    repeated uint64 ids = 1;
}

message GetGGOrderInfoByIDsResponse {
    repeated ggorder.models.v1.GGOrderInfoModel GGOrderInfos = 1;
}

message GGOrderInfoUpdateRequest {
    repeated ggorder.models.v1.GGOrderUpdateModel GGOrders = 1;
}

message GGOrderInfoUpdateResponse {
}